Trabalho 2/y.output
   0  $accept : program $end

   1  program : definitions

   2  definitions : definition
   3              | definition definitions

   4  definition : defvar
   5             | deffunc

   6  deffunc : type TK_ID '(' funcparams ')' block
   7          | TK_VOID TK_ID '(' funcparams ')' block

   8  funcparams : params
   9             |

  10  params : param ',' params
  11         | param

  12  param : type TK_ID

  13  nameslist : TK_ID
  14            | TK_ID ',' nameslist

  15  defvar : type nameslist ';'

  16  defvars : defvar
  17          | defvar defvars

  18  type : basetype
  19       | type '[' ']'

  20  basetype : TK_INT
  21           | TK_CHAR
  22           | TK_FLOAT

  23  block : '{' defvars commands '}'
  24        | '{' '}'

  25  commands : command
  26           | command commands

  27  command : TK_IF '(' exp ')' command
  28          | TK_IF '(' exp ')' command TK_ELSE command
  29          | TK_WHILE '(' exp ')' command
  30          | commandbasic

  31  commandbasic : var '=' exp ';'
  32               | TK_RETURN ';'
  33               | TK_RETURN exp ';'
  34               | call ';'
  35               | block

  36  numeral : TK_DOUBLE_NUMBER
  37          | TK_LONG_NUMBER

  38  var : TK_ID
  39      | expothers '[' exp ']'

  40  expothers : numeral
  41            | TK_STRING
  42            | var
  43            | call
  44            | TK_NEW type '[' exp ']'

  45  expunary : '-' exp
  46           | '!' exp
  47           | expothers

  48  expmult : expunary '*' expmult
  49          | expmult '/' expunary
  50          | expunary

  51  expadd : expmult '+' expadd
  52         | expmult '-' expadd
  53         | expmult

  54  expcomp : expadd '>' expcomp
  55          | expadd '<' expcomp
  56          | expadd TK_LE expcomp
  57          | expadd TK_GE expcomp
  58          | expadd

  59  expequal : expcomp '=' '=' expequal
  60           | expcomp

  61  expand : expequal TK_AND expand
  62         | expequal

  63  expor : expand TK_OR expor

  64  exp : '(' exp ')'
  65      | expor

  66  explist : exp ',' explist
  67          | exp

  68  call : TK_ID '(' explist ')'
  69       | TK_ID '(' ')'

state 0
	$accept : . program $end  (0)

	TK_CHAR  shift 1
	TK_FLOAT  shift 2
	TK_INT  shift 3
	TK_VOID  shift 4
	.  error

	program  goto 5
	definitions  goto 6
	definition  goto 7
	defvar  goto 8
	deffunc  goto 9
	type  goto 10
	basetype  goto 11


state 1
	basetype : TK_CHAR .  (21)

	.  reduce 21


state 2
	basetype : TK_FLOAT .  (22)

	.  reduce 22


state 3
	basetype : TK_INT .  (20)

	.  reduce 20


state 4
	deffunc : TK_VOID . TK_ID '(' funcparams ')' block  (7)

	TK_ID  shift 12
	.  error


state 5
	$accept : program . $end  (0)

	$end  accept


state 6
	program : definitions .  (1)

	.  reduce 1


state 7
	definitions : definition .  (2)
	definitions : definition . definitions  (3)

	TK_CHAR  shift 1
	TK_FLOAT  shift 2
	TK_INT  shift 3
	TK_VOID  shift 4
	$end  reduce 2

	definitions  goto 13
	definition  goto 7
	defvar  goto 8
	deffunc  goto 9
	type  goto 10
	basetype  goto 11


state 8
	definition : defvar .  (4)

	.  reduce 4


state 9
	definition : deffunc .  (5)

	.  reduce 5


state 10
	deffunc : type . TK_ID '(' funcparams ')' block  (6)
	defvar : type . nameslist ';'  (15)
	type : type . '[' ']'  (19)

	TK_ID  shift 14
	'['  shift 15
	.  error

	nameslist  goto 16


state 11
	type : basetype .  (18)

	.  reduce 18


state 12
	deffunc : TK_VOID TK_ID . '(' funcparams ')' block  (7)

	'('  shift 17
	.  error


state 13
	definitions : definition definitions .  (3)

	.  reduce 3


state 14
	deffunc : type TK_ID . '(' funcparams ')' block  (6)
	nameslist : TK_ID .  (13)
	nameslist : TK_ID . ',' nameslist  (14)

	'('  shift 18
	','  shift 19
	';'  reduce 13


state 15
	type : type '[' . ']'  (19)

	']'  shift 20
	.  error


state 16
	defvar : type nameslist . ';'  (15)

	';'  shift 21
	.  error


state 17
	deffunc : TK_VOID TK_ID '(' . funcparams ')' block  (7)
	funcparams : .  (9)

	TK_CHAR  shift 1
	TK_FLOAT  shift 2
	TK_INT  shift 3
	')'  reduce 9

	type  goto 22
	funcparams  goto 23
	params  goto 24
	param  goto 25
	basetype  goto 11


state 18
	deffunc : type TK_ID '(' . funcparams ')' block  (6)
	funcparams : .  (9)

	TK_CHAR  shift 1
	TK_FLOAT  shift 2
	TK_INT  shift 3
	')'  reduce 9

	type  goto 22
	funcparams  goto 26
	params  goto 24
	param  goto 25
	basetype  goto 11


state 19
	nameslist : TK_ID ',' . nameslist  (14)

	TK_ID  shift 27
	.  error

	nameslist  goto 28


state 20
	type : type '[' ']' .  (19)

	.  reduce 19


state 21
	defvar : type nameslist ';' .  (15)

	.  reduce 15


state 22
	param : type . TK_ID  (12)
	type : type . '[' ']'  (19)

	TK_ID  shift 29
	'['  shift 15
	.  error


state 23
	deffunc : TK_VOID TK_ID '(' funcparams . ')' block  (7)

	')'  shift 30
	.  error


state 24
	funcparams : params .  (8)

	.  reduce 8


state 25
	params : param . ',' params  (10)
	params : param .  (11)

	','  shift 31
	')'  reduce 11


state 26
	deffunc : type TK_ID '(' funcparams . ')' block  (6)

	')'  shift 32
	.  error


state 27
	nameslist : TK_ID .  (13)
	nameslist : TK_ID . ',' nameslist  (14)

	','  shift 19
	';'  reduce 13


state 28
	nameslist : TK_ID ',' nameslist .  (14)

	.  reduce 14


state 29
	param : type TK_ID .  (12)

	.  reduce 12


state 30
	deffunc : TK_VOID TK_ID '(' funcparams ')' . block  (7)

	'{'  shift 33
	.  error

	block  goto 34


state 31
	params : param ',' . params  (10)

	TK_CHAR  shift 1
	TK_FLOAT  shift 2
	TK_INT  shift 3
	.  error

	type  goto 22
	params  goto 35
	param  goto 25
	basetype  goto 11


state 32
	deffunc : type TK_ID '(' funcparams ')' . block  (6)

	'{'  shift 33
	.  error

	block  goto 36


state 33
	block : '{' . defvars commands '}'  (23)
	block : '{' . '}'  (24)

	TK_CHAR  shift 1
	TK_FLOAT  shift 2
	TK_INT  shift 3
	'}'  shift 37
	.  error

	defvar  goto 38
	type  goto 39
	defvars  goto 40
	basetype  goto 11


state 34
	deffunc : TK_VOID TK_ID '(' funcparams ')' block .  (7)

	.  reduce 7


state 35
	params : param ',' params .  (10)

	.  reduce 10


state 36
	deffunc : type TK_ID '(' funcparams ')' block .  (6)

	.  reduce 6


state 37
	block : '{' '}' .  (24)

	.  reduce 24


state 38
	defvars : defvar .  (16)
	defvars : defvar . defvars  (17)

	TK_CHAR  shift 1
	TK_FLOAT  shift 2
	TK_INT  shift 3
	TK_IF  reduce 16
	TK_NEW  reduce 16
	TK_RETURN  reduce 16
	TK_WHILE  reduce 16
	TK_ID  reduce 16
	TK_DOUBLE_NUMBER  reduce 16
	TK_LONG_NUMBER  reduce 16
	TK_STRING  reduce 16
	'{'  reduce 16

	defvar  goto 38
	type  goto 39
	defvars  goto 41
	basetype  goto 11


state 39
	defvar : type . nameslist ';'  (15)
	type : type . '[' ']'  (19)

	TK_ID  shift 27
	'['  shift 15
	.  error

	nameslist  goto 16


state 40
	block : '{' defvars . commands '}'  (23)

	TK_IF  shift 42
	TK_NEW  shift 43
	TK_RETURN  shift 44
	TK_WHILE  shift 45
	TK_ID  shift 46
	TK_DOUBLE_NUMBER  shift 47
	TK_LONG_NUMBER  shift 48
	TK_STRING  shift 49
	'{'  shift 33
	.  error

	block  goto 50
	commands  goto 51
	command  goto 52
	commandbasic  goto 53
	var  goto 54
	call  goto 55
	numeral  goto 56
	expothers  goto 57


state 41
	defvars : defvar defvars .  (17)

	.  reduce 17


state 42
	command : TK_IF . '(' exp ')' command  (27)
	command : TK_IF . '(' exp ')' command TK_ELSE command  (28)

	'('  shift 58
	.  error


state 43
	expothers : TK_NEW . type '[' exp ']'  (44)

	TK_CHAR  shift 1
	TK_FLOAT  shift 2
	TK_INT  shift 3
	.  error

	type  goto 59
	basetype  goto 11


state 44
	commandbasic : TK_RETURN . ';'  (32)
	commandbasic : TK_RETURN . exp ';'  (33)

	TK_NEW  shift 43
	TK_ID  shift 46
	TK_DOUBLE_NUMBER  shift 47
	TK_LONG_NUMBER  shift 48
	TK_STRING  shift 49
	'('  shift 60
	';'  shift 61
	'-'  shift 62
	'!'  shift 63
	.  error

	exp  goto 64
	var  goto 65
	call  goto 66
	numeral  goto 56
	expothers  goto 67
	expunary  goto 68
	expmult  goto 69
	expadd  goto 70
	expcomp  goto 71
	expequal  goto 72
	expand  goto 73
	expor  goto 74


state 45
	command : TK_WHILE . '(' exp ')' command  (29)

	'('  shift 75
	.  error


state 46
	var : TK_ID .  (38)
	call : TK_ID . '(' explist ')'  (68)
	call : TK_ID . '(' ')'  (69)

	'('  shift 76
	TK_LE  reduce 38
	TK_GE  reduce 38
	TK_AND  reduce 38
	TK_OR  reduce 38
	'['  reduce 38
	'='  reduce 38
	'-'  reduce 38
	'*'  reduce 38
	'/'  reduce 38
	'+'  reduce 38
	'>'  reduce 38
	'<'  reduce 38


state 47
	numeral : TK_DOUBLE_NUMBER .  (36)

	.  reduce 36


state 48
	numeral : TK_LONG_NUMBER .  (37)

	.  reduce 37


state 49
	expothers : TK_STRING .  (41)

	.  reduce 41


state 50
	commandbasic : block .  (35)

	.  reduce 35


state 51
	block : '{' defvars commands . '}'  (23)

	'}'  shift 77
	.  error


state 52
	commands : command .  (25)
	commands : command . commands  (26)

	TK_IF  shift 42
	TK_NEW  shift 43
	TK_RETURN  shift 44
	TK_WHILE  shift 45
	TK_ID  shift 46
	TK_DOUBLE_NUMBER  shift 47
	TK_LONG_NUMBER  shift 48
	TK_STRING  shift 49
	'{'  shift 33
	'}'  reduce 25

	block  goto 50
	commands  goto 78
	command  goto 52
	commandbasic  goto 53
	var  goto 54
	call  goto 55
	numeral  goto 56
	expothers  goto 57


state 53
	command : commandbasic .  (30)

	.  reduce 30


state 54
	commandbasic : var . '=' exp ';'  (31)
	expothers : var .  (42)

	'='  shift 79
	'['  reduce 42


state 55
	commandbasic : call . ';'  (34)
	expothers : call .  (43)

	';'  shift 80
	'['  reduce 43


state 56
	expothers : numeral .  (40)

	.  reduce 40


state 57
	var : expothers . '[' exp ']'  (39)

	'['  shift 81
	.  error


state 58
	command : TK_IF '(' . exp ')' command  (27)
	command : TK_IF '(' . exp ')' command TK_ELSE command  (28)

	TK_NEW  shift 43
	TK_ID  shift 46
	TK_DOUBLE_NUMBER  shift 47
	TK_LONG_NUMBER  shift 48
	TK_STRING  shift 49
	'('  shift 60
	'-'  shift 62
	'!'  shift 63
	.  error

	exp  goto 82
	var  goto 65
	call  goto 66
	numeral  goto 56
	expothers  goto 67
	expunary  goto 68
	expmult  goto 69
	expadd  goto 70
	expcomp  goto 71
	expequal  goto 72
	expand  goto 73
	expor  goto 74


state 59
	type : type . '[' ']'  (19)
	expothers : TK_NEW type . '[' exp ']'  (44)

	'['  shift 83
	.  error


state 60
	exp : '(' . exp ')'  (64)

	TK_NEW  shift 43
	TK_ID  shift 46
	TK_DOUBLE_NUMBER  shift 47
	TK_LONG_NUMBER  shift 48
	TK_STRING  shift 49
	'('  shift 60
	'-'  shift 62
	'!'  shift 63
	.  error

	exp  goto 84
	var  goto 65
	call  goto 66
	numeral  goto 56
	expothers  goto 67
	expunary  goto 68
	expmult  goto 69
	expadd  goto 70
	expcomp  goto 71
	expequal  goto 72
	expand  goto 73
	expor  goto 74


state 61
	commandbasic : TK_RETURN ';' .  (32)

	.  reduce 32


state 62
	expunary : '-' . exp  (45)

	TK_NEW  shift 43
	TK_ID  shift 46
	TK_DOUBLE_NUMBER  shift 47
	TK_LONG_NUMBER  shift 48
	TK_STRING  shift 49
	'('  shift 60
	'-'  shift 62
	'!'  shift 63
	.  error

	exp  goto 85
	var  goto 65
	call  goto 66
	numeral  goto 56
	expothers  goto 67
	expunary  goto 68
	expmult  goto 69
	expadd  goto 70
	expcomp  goto 71
	expequal  goto 72
	expand  goto 73
	expor  goto 74


state 63
	expunary : '!' . exp  (46)

	TK_NEW  shift 43
	TK_ID  shift 46
	TK_DOUBLE_NUMBER  shift 47
	TK_LONG_NUMBER  shift 48
	TK_STRING  shift 49
	'('  shift 60
	'-'  shift 62
	'!'  shift 63
	.  error

	exp  goto 86
	var  goto 65
	call  goto 66
	numeral  goto 56
	expothers  goto 67
	expunary  goto 68
	expmult  goto 69
	expadd  goto 70
	expcomp  goto 71
	expequal  goto 72
	expand  goto 73
	expor  goto 74


state 64
	commandbasic : TK_RETURN exp . ';'  (33)

	';'  shift 87
	.  error


state 65
	expothers : var .  (42)

	.  reduce 42


state 66
	expothers : call .  (43)

	.  reduce 43


state 67
	var : expothers . '[' exp ']'  (39)
	expunary : expothers .  (47)

	'['  shift 81
	TK_LE  reduce 47
	TK_GE  reduce 47
	TK_AND  reduce 47
	TK_OR  reduce 47
	'='  reduce 47
	'-'  reduce 47
	'*'  reduce 47
	'/'  reduce 47
	'+'  reduce 47
	'>'  reduce 47
	'<'  reduce 47


state 68
	expmult : expunary . '*' expmult  (48)
	expmult : expunary .  (50)

	'*'  shift 88
	TK_LE  reduce 50
	TK_GE  reduce 50
	TK_AND  reduce 50
	TK_OR  reduce 50
	'='  reduce 50
	'-'  reduce 50
	'/'  reduce 50
	'+'  reduce 50
	'>'  reduce 50
	'<'  reduce 50


state 69
	expmult : expmult . '/' expunary  (49)
	expadd : expmult . '+' expadd  (51)
	expadd : expmult . '-' expadd  (52)
	expadd : expmult .  (53)

	'-'  shift 89
	'/'  shift 90
	'+'  shift 91
	TK_LE  reduce 53
	TK_GE  reduce 53
	TK_AND  reduce 53
	TK_OR  reduce 53
	'='  reduce 53
	'>'  reduce 53
	'<'  reduce 53


state 70
	expcomp : expadd . '>' expcomp  (54)
	expcomp : expadd . '<' expcomp  (55)
	expcomp : expadd . TK_LE expcomp  (56)
	expcomp : expadd . TK_GE expcomp  (57)
	expcomp : expadd .  (58)

	TK_LE  shift 92
	TK_GE  shift 93
	'>'  shift 94
	'<'  shift 95
	TK_AND  reduce 58
	TK_OR  reduce 58
	'='  reduce 58


state 71
	expequal : expcomp . '=' '=' expequal  (59)
	expequal : expcomp .  (60)

	'='  shift 96
	TK_AND  reduce 60
	TK_OR  reduce 60


state 72
	expand : expequal . TK_AND expand  (61)
	expand : expequal .  (62)

	TK_AND  shift 97
	TK_OR  reduce 62


state 73
	expor : expand . TK_OR expor  (63)

	TK_OR  shift 98
	.  error


state 74
	exp : expor .  (65)

	.  reduce 65


state 75
	command : TK_WHILE '(' . exp ')' command  (29)

	TK_NEW  shift 43
	TK_ID  shift 46
	TK_DOUBLE_NUMBER  shift 47
	TK_LONG_NUMBER  shift 48
	TK_STRING  shift 49
	'('  shift 60
	'-'  shift 62
	'!'  shift 63
	.  error

	exp  goto 99
	var  goto 65
	call  goto 66
	numeral  goto 56
	expothers  goto 67
	expunary  goto 68
	expmult  goto 69
	expadd  goto 70
	expcomp  goto 71
	expequal  goto 72
	expand  goto 73
	expor  goto 74


state 76
	call : TK_ID '(' . explist ')'  (68)
	call : TK_ID '(' . ')'  (69)

	TK_NEW  shift 43
	TK_ID  shift 46
	TK_DOUBLE_NUMBER  shift 47
	TK_LONG_NUMBER  shift 48
	TK_STRING  shift 49
	'('  shift 60
	')'  shift 100
	'-'  shift 62
	'!'  shift 63
	.  error

	exp  goto 101
	var  goto 65
	call  goto 66
	numeral  goto 56
	expothers  goto 67
	expunary  goto 68
	expmult  goto 69
	expadd  goto 70
	expcomp  goto 71
	expequal  goto 72
	expand  goto 73
	expor  goto 74
	explist  goto 102


state 77
	block : '{' defvars commands '}' .  (23)

	.  reduce 23


state 78
	commands : command commands .  (26)

	.  reduce 26


state 79
	commandbasic : var '=' . exp ';'  (31)

	TK_NEW  shift 43
	TK_ID  shift 46
	TK_DOUBLE_NUMBER  shift 47
	TK_LONG_NUMBER  shift 48
	TK_STRING  shift 49
	'('  shift 60
	'-'  shift 62
	'!'  shift 63
	.  error

	exp  goto 103
	var  goto 65
	call  goto 66
	numeral  goto 56
	expothers  goto 67
	expunary  goto 68
	expmult  goto 69
	expadd  goto 70
	expcomp  goto 71
	expequal  goto 72
	expand  goto 73
	expor  goto 74


state 80
	commandbasic : call ';' .  (34)

	.  reduce 34


state 81
	var : expothers '[' . exp ']'  (39)

	TK_NEW  shift 43
	TK_ID  shift 46
	TK_DOUBLE_NUMBER  shift 47
	TK_LONG_NUMBER  shift 48
	TK_STRING  shift 49
	'('  shift 60
	'-'  shift 62
	'!'  shift 63
	.  error

	exp  goto 104
	var  goto 65
	call  goto 66
	numeral  goto 56
	expothers  goto 67
	expunary  goto 68
	expmult  goto 69
	expadd  goto 70
	expcomp  goto 71
	expequal  goto 72
	expand  goto 73
	expor  goto 74


state 82
	command : TK_IF '(' exp . ')' command  (27)
	command : TK_IF '(' exp . ')' command TK_ELSE command  (28)

	')'  shift 105
	.  error


state 83
	type : type '[' . ']'  (19)
	expothers : TK_NEW type '[' . exp ']'  (44)

	TK_NEW  shift 43
	TK_ID  shift 46
	TK_DOUBLE_NUMBER  shift 47
	TK_LONG_NUMBER  shift 48
	TK_STRING  shift 49
	'('  shift 60
	']'  shift 20
	'-'  shift 62
	'!'  shift 63
	.  error

	exp  goto 106
	var  goto 65
	call  goto 66
	numeral  goto 56
	expothers  goto 67
	expunary  goto 68
	expmult  goto 69
	expadd  goto 70
	expcomp  goto 71
	expequal  goto 72
	expand  goto 73
	expor  goto 74


state 84
	exp : '(' exp . ')'  (64)

	')'  shift 107
	.  error


state 85
	expunary : '-' exp .  (45)

	.  reduce 45


state 86
	expunary : '!' exp .  (46)

	.  reduce 46


state 87
	commandbasic : TK_RETURN exp ';' .  (33)

	.  reduce 33


state 88
	expmult : expunary '*' . expmult  (48)

	TK_NEW  shift 43
	TK_ID  shift 46
	TK_DOUBLE_NUMBER  shift 47
	TK_LONG_NUMBER  shift 48
	TK_STRING  shift 49
	'-'  shift 62
	'!'  shift 63
	.  error

	var  goto 65
	call  goto 66
	numeral  goto 56
	expothers  goto 67
	expunary  goto 68
	expmult  goto 108


state 89
	expadd : expmult '-' . expadd  (52)

	TK_NEW  shift 43
	TK_ID  shift 46
	TK_DOUBLE_NUMBER  shift 47
	TK_LONG_NUMBER  shift 48
	TK_STRING  shift 49
	'-'  shift 62
	'!'  shift 63
	.  error

	var  goto 65
	call  goto 66
	numeral  goto 56
	expothers  goto 67
	expunary  goto 68
	expmult  goto 69
	expadd  goto 109


state 90
	expmult : expmult '/' . expunary  (49)

	TK_NEW  shift 43
	TK_ID  shift 46
	TK_DOUBLE_NUMBER  shift 47
	TK_LONG_NUMBER  shift 48
	TK_STRING  shift 49
	'-'  shift 62
	'!'  shift 63
	.  error

	var  goto 65
	call  goto 66
	numeral  goto 56
	expothers  goto 67
	expunary  goto 110


state 91
	expadd : expmult '+' . expadd  (51)

	TK_NEW  shift 43
	TK_ID  shift 46
	TK_DOUBLE_NUMBER  shift 47
	TK_LONG_NUMBER  shift 48
	TK_STRING  shift 49
	'-'  shift 62
	'!'  shift 63
	.  error

	var  goto 65
	call  goto 66
	numeral  goto 56
	expothers  goto 67
	expunary  goto 68
	expmult  goto 69
	expadd  goto 111


state 92
	expcomp : expadd TK_LE . expcomp  (56)

	TK_NEW  shift 43
	TK_ID  shift 46
	TK_DOUBLE_NUMBER  shift 47
	TK_LONG_NUMBER  shift 48
	TK_STRING  shift 49
	'-'  shift 62
	'!'  shift 63
	.  error

	var  goto 65
	call  goto 66
	numeral  goto 56
	expothers  goto 67
	expunary  goto 68
	expmult  goto 69
	expadd  goto 70
	expcomp  goto 112


state 93
	expcomp : expadd TK_GE . expcomp  (57)

	TK_NEW  shift 43
	TK_ID  shift 46
	TK_DOUBLE_NUMBER  shift 47
	TK_LONG_NUMBER  shift 48
	TK_STRING  shift 49
	'-'  shift 62
	'!'  shift 63
	.  error

	var  goto 65
	call  goto 66
	numeral  goto 56
	expothers  goto 67
	expunary  goto 68
	expmult  goto 69
	expadd  goto 70
	expcomp  goto 113


state 94
	expcomp : expadd '>' . expcomp  (54)

	TK_NEW  shift 43
	TK_ID  shift 46
	TK_DOUBLE_NUMBER  shift 47
	TK_LONG_NUMBER  shift 48
	TK_STRING  shift 49
	'-'  shift 62
	'!'  shift 63
	.  error

	var  goto 65
	call  goto 66
	numeral  goto 56
	expothers  goto 67
	expunary  goto 68
	expmult  goto 69
	expadd  goto 70
	expcomp  goto 114


state 95
	expcomp : expadd '<' . expcomp  (55)

	TK_NEW  shift 43
	TK_ID  shift 46
	TK_DOUBLE_NUMBER  shift 47
	TK_LONG_NUMBER  shift 48
	TK_STRING  shift 49
	'-'  shift 62
	'!'  shift 63
	.  error

	var  goto 65
	call  goto 66
	numeral  goto 56
	expothers  goto 67
	expunary  goto 68
	expmult  goto 69
	expadd  goto 70
	expcomp  goto 115


state 96
	expequal : expcomp '=' . '=' expequal  (59)

	'='  shift 116
	.  error


state 97
	expand : expequal TK_AND . expand  (61)

	TK_NEW  shift 43
	TK_ID  shift 46
	TK_DOUBLE_NUMBER  shift 47
	TK_LONG_NUMBER  shift 48
	TK_STRING  shift 49
	'-'  shift 62
	'!'  shift 63
	.  error

	var  goto 65
	call  goto 66
	numeral  goto 56
	expothers  goto 67
	expunary  goto 68
	expmult  goto 69
	expadd  goto 70
	expcomp  goto 71
	expequal  goto 72
	expand  goto 117


state 98
	expor : expand TK_OR . expor  (63)

	TK_NEW  shift 43
	TK_ID  shift 46
	TK_DOUBLE_NUMBER  shift 47
	TK_LONG_NUMBER  shift 48
	TK_STRING  shift 49
	'-'  shift 62
	'!'  shift 63
	.  error

	var  goto 65
	call  goto 66
	numeral  goto 56
	expothers  goto 67
	expunary  goto 68
	expmult  goto 69
	expadd  goto 70
	expcomp  goto 71
	expequal  goto 72
	expand  goto 73
	expor  goto 118


state 99
	command : TK_WHILE '(' exp . ')' command  (29)

	')'  shift 119
	.  error


state 100
	call : TK_ID '(' ')' .  (69)

	.  reduce 69


state 101
	explist : exp . ',' explist  (66)
	explist : exp .  (67)

	','  shift 120
	')'  reduce 67


state 102
	call : TK_ID '(' explist . ')'  (68)

	')'  shift 121
	.  error


state 103
	commandbasic : var '=' exp . ';'  (31)

	';'  shift 122
	.  error


state 104
	var : expothers '[' exp . ']'  (39)

	']'  shift 123
	.  error


state 105
	command : TK_IF '(' exp ')' . command  (27)
	command : TK_IF '(' exp ')' . command TK_ELSE command  (28)

	TK_IF  shift 42
	TK_NEW  shift 43
	TK_RETURN  shift 44
	TK_WHILE  shift 45
	TK_ID  shift 46
	TK_DOUBLE_NUMBER  shift 47
	TK_LONG_NUMBER  shift 48
	TK_STRING  shift 49
	'{'  shift 33
	.  error

	block  goto 50
	command  goto 124
	commandbasic  goto 53
	var  goto 54
	call  goto 55
	numeral  goto 56
	expothers  goto 57


state 106
	expothers : TK_NEW type '[' exp . ']'  (44)

	']'  shift 125
	.  error


state 107
	exp : '(' exp ')' .  (64)

	.  reduce 64


108: shift/reduce conflict (shift 90, reduce 48) on '/'
state 108
	expmult : expunary '*' expmult .  (48)
	expmult : expmult . '/' expunary  (49)

	'/'  shift 90
	TK_LE  reduce 48
	TK_GE  reduce 48
	TK_AND  reduce 48
	TK_OR  reduce 48
	'='  reduce 48
	'-'  reduce 48
	'+'  reduce 48
	'>'  reduce 48
	'<'  reduce 48


state 109
	expadd : expmult '-' expadd .  (52)

	.  reduce 52


state 110
	expmult : expmult '/' expunary .  (49)

	.  reduce 49


state 111
	expadd : expmult '+' expadd .  (51)

	.  reduce 51


state 112
	expcomp : expadd TK_LE expcomp .  (56)

	.  reduce 56


state 113
	expcomp : expadd TK_GE expcomp .  (57)

	.  reduce 57


state 114
	expcomp : expadd '>' expcomp .  (54)

	.  reduce 54


state 115
	expcomp : expadd '<' expcomp .  (55)

	.  reduce 55


state 116
	expequal : expcomp '=' '=' . expequal  (59)

	TK_NEW  shift 43
	TK_ID  shift 46
	TK_DOUBLE_NUMBER  shift 47
	TK_LONG_NUMBER  shift 48
	TK_STRING  shift 49
	'-'  shift 62
	'!'  shift 63
	.  error

	var  goto 65
	call  goto 66
	numeral  goto 56
	expothers  goto 67
	expunary  goto 68
	expmult  goto 69
	expadd  goto 70
	expcomp  goto 71
	expequal  goto 126


state 117
	expand : expequal TK_AND expand .  (61)

	.  reduce 61


state 118
	expor : expand TK_OR expor .  (63)

	.  reduce 63


state 119
	command : TK_WHILE '(' exp ')' . command  (29)

	TK_IF  shift 42
	TK_NEW  shift 43
	TK_RETURN  shift 44
	TK_WHILE  shift 45
	TK_ID  shift 46
	TK_DOUBLE_NUMBER  shift 47
	TK_LONG_NUMBER  shift 48
	TK_STRING  shift 49
	'{'  shift 33
	.  error

	block  goto 50
	command  goto 127
	commandbasic  goto 53
	var  goto 54
	call  goto 55
	numeral  goto 56
	expothers  goto 57


state 120
	explist : exp ',' . explist  (66)

	TK_NEW  shift 43
	TK_ID  shift 46
	TK_DOUBLE_NUMBER  shift 47
	TK_LONG_NUMBER  shift 48
	TK_STRING  shift 49
	'('  shift 60
	'-'  shift 62
	'!'  shift 63
	.  error

	exp  goto 101
	var  goto 65
	call  goto 66
	numeral  goto 56
	expothers  goto 67
	expunary  goto 68
	expmult  goto 69
	expadd  goto 70
	expcomp  goto 71
	expequal  goto 72
	expand  goto 73
	expor  goto 74
	explist  goto 128


state 121
	call : TK_ID '(' explist ')' .  (68)

	.  reduce 68


state 122
	commandbasic : var '=' exp ';' .  (31)

	.  reduce 31


state 123
	var : expothers '[' exp ']' .  (39)

	.  reduce 39


state 124
	command : TK_IF '(' exp ')' command .  (27)
	command : TK_IF '(' exp ')' command . TK_ELSE command  (28)

	TK_ELSE  shift 129
	TK_IF  reduce 27
	TK_NEW  reduce 27
	TK_RETURN  reduce 27
	TK_WHILE  reduce 27
	TK_ID  reduce 27
	TK_DOUBLE_NUMBER  reduce 27
	TK_LONG_NUMBER  reduce 27
	TK_STRING  reduce 27
	'{'  reduce 27
	'}'  reduce 27


state 125
	expothers : TK_NEW type '[' exp ']' .  (44)

	.  reduce 44


state 126
	expequal : expcomp '=' '=' expequal .  (59)

	.  reduce 59


state 127
	command : TK_WHILE '(' exp ')' command .  (29)

	.  reduce 29


state 128
	explist : exp ',' explist .  (66)

	.  reduce 66


state 129
	command : TK_IF '(' exp ')' command TK_ELSE . command  (28)

	TK_IF  shift 42
	TK_NEW  shift 43
	TK_RETURN  shift 44
	TK_WHILE  shift 45
	TK_ID  shift 46
	TK_DOUBLE_NUMBER  shift 47
	TK_LONG_NUMBER  shift 48
	TK_STRING  shift 49
	'{'  shift 33
	.  error

	block  goto 50
	command  goto 130
	commandbasic  goto 53
	var  goto 54
	call  goto 55
	numeral  goto 56
	expothers  goto 57


state 130
	command : TK_IF '(' exp ')' command TK_ELSE command .  (28)

	.  reduce 28


State 108 contains 1 shift/reduce conflict.


37 terminals, 30 nonterminals
70 grammar rules, 131 states
